--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "autoprefixer": "^10.4.21",
+    "cheerio": "^1.1.2",
     "leaflet": "^1.9.4",
     "next": "15.3.5",
     "postcss": "^8.5.6",
